Add Certificates & Awards section with Hackathon Hi! Paris achievement

--- a/index.html
+++ b/index.html
@@ -555,6 +555,24 @@
             </div>
         </section>
 
+        <section class="section">
+            <h2>Certificates & Awards</h2>
+            <div class="experience-item">
+                <div class="job-title">🏆 Hackathon Hi! Paris</div>
+                <div class="date">November 2023</div>
+                <div class="description">
+                    <p><strong>Challenge: Sales Prediction for Schneider Electric</strong></p>
+                    <ul>
+                        <li>Implemented regression algorithms with boosting techniques to predict sales</li>
+                        <li>Developed an economic model to support business decision-making</li>
+                        <li>Co-authored a scientific article documenting methodology and results</li>
+                    </ul>
+                    <!-- Certificate image -->
+                    <img src="certificathi!.png" alt="Hackathon Hi! Paris Certificate" class="project-image" onerror="this.style.display='none';">
+                </div>
+            </div>
+        </section>
+
         <section class="section" style="text-align: center;">
             <h2>Let's Connect!</h2>
             <p style="font-size: 1.1em; margin-bottom: 20px;">I'm actively seeking an end-of-studies internship starting April 2026. Let's discuss how I can contribute to your team!</p>
