--- a/index.html
+++ b/index.html
@@ -513,6 +513,12 @@
                         <li>Designed explainable recommendations aligned with psychological profiles</li>
                         <li>Implemented real-time assessments and performance dashboards</li>
                     </ul>
+                    <!-- Demo Video -->
+                    <video class="demo-video" controls>
+                        <source src="music-wellbeing_demo.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <p class="video-caption">Demo: Music therapy recommendation system interface and features</p>
                     <!-- Add project screenshot: save as project-music-therapy.png/jpg -->
                     <img src="project-music-therapy.png" alt="Music Therapy Recommender Interface" class="project-image" onerror="this.style.display='none';">
                     <a href="https://github.com/DriraYosr/music-mental_health/tree/main/music-wellbeing-recommender" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold; margin-top: 10px; display: inline-block;">
