Add live demo button for Music Therapy Streamlit app

--- a/index.html
+++ b/index.html
@@ -521,9 +521,14 @@
                     <p class="video-caption">Demo: Music therapy recommendation system interface and features</p>
                     <!-- Add project screenshot: save as project-music-therapy.png/jpg -->
                     <img src="project-music-therapy.png" alt="Music Therapy Recommender Interface" class="project-image" onerror="this.style.display='none';">
-                    <a href="https://github.com/DriraYosr/music-mental_health/tree/main/music-wellbeing-recommender" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold; margin-top: 10px; display: inline-block;">
-                        🔗 View on GitHub
-                    </a>
+                    <div style="margin-top: 15px; display: flex; gap: 15px; flex-wrap: wrap;">
+                        <a href="https://music-mentalhealth-vsmz2luqxtuoeagqluwpmu.streamlit.app/" target="_blank" class="cta-button" style="margin-top: 0;">
+                            🎵 Want to Try the Demo?
+                        </a>
+                        <a href="https://github.com/DriraYosr/music-mental_health/tree/main/music-wellbeing-recommender" target="_blank" style="color: #667eea; text-decoration: none; font-weight: bold; display: inline-flex; align-items: center;">
+                            🔗 View on GitHub
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="project-item">
